car-marketplace/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: car-marketplace
  namespace: car-marketplace
spec:
  selector:
    app: car-marketplace
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      name: http
  type: ClusterIP
